--- a/contact.html
+++ b/contact.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-    <h1>My Contact Details</h1>
-    <p>shrutishreemahato@gmail.com</p>
+    <h1>Contact</h1>
     <a href="https://www.linkedin.com/in/shruti-shree-mahato-09011024b/?originalSubdomain=in">linkedin</a>
-    <p>7031702224</p>
     <hr>
     <form action="mailto:shrutishreemahato@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
